--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Title</title>
+	<title>Для конкурса Хауди Хо</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,23 +28,53 @@
 
 <body>
 
-	<div class="container">
-
+	<div class="container-fluid">
 		<div class="row">
 
-			<div class="col-sm-8 col-sm-offset-2">
-				
-				<img class="img-responsive" src="img/preview.jpg" alt="Start HTML5 Template">
-				<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Пустился снова, силуэт сих снова не коварный за языкового текста до рекламных, агенство возвращайся, буквенных жизни это, первую переулка правилами?</p>
-				<p>Наш, приставка страна единственное большой, власти, злых, взобравшись семь рот он алфавит осталось вершину курсивных сих всемогущая буквенных предупредила залетают необходимыми эта но вдали имеет ты? Предупреждал повстречался, но которое!</p>
-				<p>Злых, знаках свою. Выйти по всей рукописи запятой дороге маленький дорогу, все вопроса переулка необходимыми точках повстречался текстов наш приставка одна над страна последний, за имеет ты всемогущая предложения рот скатился.</p>
+			<!-- Панель меню -->
+			<div class="left-panel">
+
+				<a href="#" class="logo"><span>Al-rayhan</span> UI & UX Designer</a>
+
+				<nav class="menu">
+					<ul>
+						<li><a href="#" class="menu--active">Skills</a></li>
+						<li><a href="#">Education</a></li>
+						<li><a href="#">Experience</a></li>
+						<li><a href="#">Portfolio</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Pricing</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</nav>
 
 			</div>
-			
-		</div>
 
+			<!-- Панель контента -->
+			<div class="right-panel">	
+				<div class="col-lg-12">
+
+					<!-- шапка -->
+					<header class="main-header">
+						<div class="sl-header">
+							<div class="sl-header__slider">
+								<h1>Hello I'M Shekh Al <span>Rayhan</span></h1>
+								<h3>UI & UX Designer</h3>
+								<p>Hello, I’m a <a href="#">UI/UX</a> Designer  from <a href="#">DeviserWeb</a>, Bangladesh. I hold a master degree of Web Design from the World University. It has a survived not only five centuries, hello a also the leap into electronic typesetting, remaining essentially unchanged.</p>
+							</div>
+							<div class="sl">hello</div>
+							<div class="sl">hello</div>
+							<div class="sl">hello</div>
+							<div class="sl">hello</div>
+						</div>
+					</header>
+
+				</div>
+			</div>
+
+		</div>
 	</div>
-	
+
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
 
