--- a/app/index.html
+++ b/app/index.html
@@ -412,6 +412,36 @@
 						<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 							<h2 class="sect-head">Pricing plan</h2>
 
+							<div class="row">
+
+								<div class="col-lg-6 col-md-6">
+									<div class="plan-item">
+										<h3>App Design / <span>199$</span></h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, magnam?</p>
+										<ul class="line">
+											<li class="clearfix"><p>Project</p><span>10</span></li>
+											<li class="clearfix"><p>Storage</p><span>100GB</span></li>
+											<li class="clearfix"><p>Support</p><span>1 Month</span></li>
+										</ul>
+										<a href="#" class="link">Register Now</a>
+									</div>
+								</div>
+
+								<div class="col-lg-6 col-md-6">
+									<div class="plan-item">
+										<h3>Web Design / <span>299$</span></h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, magnam?</p>
+										<ul class="line">
+											<li class="clearfix"><p>Project</p><span>10</span></li>
+											<li class="clearfix"><p>Storage</p><span>100GB</span></li>
+											<li class="clearfix"><p>Support</p><span>1 Month</span></li>
+										</ul>
+										<a href="#" class="link">Register Now</a>
+									</div>
+								</div>
+
+							</div>
+
 						</div>
 					</section>
 
@@ -419,6 +449,8 @@
 					<section class="clients sect clearfix">
 						<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 							<h2 class="sect-head">Client's feedback</h2>
+
+							hello
 
 						</div>
 					</section>
