--- a/app/index.html
+++ b/app/index.html
@@ -450,7 +450,22 @@
 						<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 							<h2 class="sect-head">Client's feedback</h2>
 
-							hello
+							<div class="sl-clients-nav">
+								<div class="clients-nav"><div class="wrap-img"><img src="img/img.png" alt="image"></div></div>
+								<div class="clients-nav"><div class="wrap-img"><img src="img/img.png" alt="image"></div></div>
+								<div class="clients-nav"><div class="wrap-img"><img src="img/img.png" alt="image"></div></div>
+							</div>
+
+							<div class="sl-clients">
+								<div class="sl-clients__slider">
+									<h3>Junaed Ahmed</h3>
+									<span>UI/UX Designer at DeviserWeb</span>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consectetur quo culpa obcaecati non. Molestiae id temporibus nemo inventore, at reiciendis distinctio, porro atque, accusantium adipisci quis laudantium cum provident.</p>
+								</div>
+								<div class="sl-clients__slider">hi</div>
+								<div class="sl-clients__slider">hi</div>
+								<div class="sl-clients__slider">hi</div>
+							</div>
 
 						</div>
 					</section>
