--- a/app/index.html
+++ b/app/index.html
@@ -454,17 +454,34 @@
 								<div class="clients-nav"><div class="wrap-img"><img src="img/img.png" alt="image"></div></div>
 								<div class="clients-nav"><div class="wrap-img"><img src="img/img.png" alt="image"></div></div>
 								<div class="clients-nav"><div class="wrap-img"><img src="img/img.png" alt="image"></div></div>
+								<div class="clients-nav"><div class="wrap-img"><img src="img/img.png" alt="image"></div></div>
 							</div>
 
 							<div class="sl-clients">
+								
 								<div class="sl-clients__slider">
 									<h3>Junaed Ahmed</h3>
-									<span>UI/UX Designer at DeviserWeb</span>
+									<span>UI/UX Designer at <em>DeviserWeb</em></span>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consectetur quo culpa obcaecati non. Molestiae id temporibus nemo inventore, at reiciendis distinctio, porro atque, accusantium adipisci quis laudantium cum provident.</p>
 								</div>
-								<div class="sl-clients__slider">hi</div>
-								<div class="sl-clients__slider">hi</div>
-								<div class="sl-clients__slider">hi</div>
+
+								<div class="sl-clients__slider">
+									<h3>Junaed Ahmed</h3>
+									<span>UI/UX Designer at <em>DeviserWeb</em></span>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consectetur quo culpa obcaecati non. Molestiae id temporibus nemo inventore, at reiciendis distinctio, porro atque, accusantium adipisci quis laudantium cum provident.</p>
+								</div>
+
+								<div class="sl-clients__slider">
+									<h3>Junaed Ahmed</h3>
+									<span>UI/UX Designer at <em>DeviserWeb</em></span>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consectetur quo culpa obcaecati non. Molestiae id temporibus nemo inventore, at reiciendis distinctio, porro atque, accusantium adipisci quis laudantium cum provident.</p>
+								</div>
+
+								<div class="sl-clients__slider">
+									<h3>Junaed Ahmed</h3>
+									<span>UI/UX Designer at <em>DeviserWeb</em></span>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consectetur quo culpa obcaecati non. Molestiae id temporibus nemo inventore, at reiciendis distinctio, porro atque, accusantium adipisci quis laudantium cum provident.</p>
+								</div>
 							</div>
 
 						</div>
@@ -474,6 +491,8 @@
 					<footer class="main-footer sect clearfix">
 						<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 							<h2 class="sect-head">Say Hello</h2>
+							
+
 
 						</div>
 					</footer>
