--- a/app/index.html
+++ b/app/index.html
@@ -501,8 +501,8 @@
 										</li>
 										<li>
 											<i class="pe-7s-mail-open"></i><h3>Contact</h3>
-											<p>arpon007das@gmail.com </p>
-											<p>onlinearpon@gmail.com</p>
+											<p><a href="mailto:arpon007das@gmail.com">arpon007das@gmail.com</a> </p>
+											<p><a href="mailto:onlinearpon@gmail.com">onlinearpon@gmail.com</a></p>
 										</li>
 									</ul>
 
@@ -518,17 +518,17 @@
 									<form action="" class="form">
 										<input type="text" placeholder="Your Name">
 										<input type="mail" placeholder="Your Email">
-										<div class="select" id="select">What are Your Interested<i class="fa fa-angle-down" aria-hidden="true"></i>
+										<div class="select" id="select"><span>What are Your Interested</span><i class="fa fa-angle-down" aria-hidden="true"></i>
 											<ul class="select-item">
-												<li rel="hiden" class="hidden">What are Your Interested</li>
+												<li rel="hidden" class="hidden">What are Your Interested</li>
 												<li rel="Interest1">Interest1</li>
-												<li rel="Interest2">Interest1</li>
-												<li rel="Interest3">Interest1</li>
+												<li rel="Interest2">Interest2</li>
+												<li rel="Interest3">Interest3</li>
 											</ul>
 										</div>
 
 										<textarea name="" id="" cols="20" rows="4" placeholder="Type Your message"></textarea>
-										<b class="link">Lets Talk To Me</b>
+										<button class="link">Lets Talk To Me</button>
 									</form>
 								</div>
 							</div>
