--- a/app/index.html
+++ b/app/index.html
@@ -448,7 +448,7 @@
 					<!-- секция отзывы клиентов-->
 					<section class="clients sect clearfix">
 						<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
-							<h2 class="sect-head">Client's feedback</h2>
+							<div class="center clearfix"><h2 class="sect-head">Client's feedback</h2></div>
 
 							<div class="sl-clients-nav">
 								<div class="clients-nav"><div class="wrap-img"><img src="img/img.png" alt="image"></div></div>
@@ -516,8 +516,8 @@
 								</div>
 								<div class="col-lg-7 col-md-7">
 									<form action="" class="form">
-										<input type="text" placeholder="Your Name">
-										<input type="mail" placeholder="Your Email">
+										<input type="text" placeholder="Your Name" required="">
+										<input type="mail" placeholder="Your Email" required="">
 										<div class="select" id="select"><span>What are Your Interested</span><i class="fa fa-angle-down" aria-hidden="true"></i>
 											<ul class="select-item">
 												<li rel="hidden" class="hidden">What are Your Interested</li>
@@ -527,7 +527,7 @@
 											</ul>
 										</div>
 
-										<textarea name="" id="" cols="20" rows="4" placeholder="Type Your message"></textarea>
+										<textarea name="" id="" cols="20" rows="4" placeholder="Type Your message" required=""></textarea>
 										<button class="link">Lets Talk To Me</button>
 									</form>
 								</div>
