ready toggle menu

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,9 @@
 		<div class="row">
 
 			<!-- Панель меню -->
-			<div class="left-panel hidden-sm hidden-xs">
+			<div class="left-panel">
+
+				<div class="toggle-menu"><span></span></div>
 
 				<a href="#" class="logo"><span>Al-rayhan</span> UI & UX Designer</a>
 
