--- a/app/index.html
+++ b/app/index.html
@@ -56,9 +56,9 @@
 			<div class="right-panel">	
 
 					<!-- шапка -->
-					<header class="main-header">
+					<header class="main-header clearfix">
 						
-							<div class="col-lg-6 col-lg-offset-5 col-sm-7 col-sm-offset-3 col-xs-10 col-xs-offset-1">
+							<div class="col-lg-6 col-lg-offset-5 col-sm-7 col-sm-offset-3">
 
 							<!-- слайдер шапки-->
 							<div class="sl-header">
