--- a/app/index.html
+++ b/app/index.html
@@ -416,7 +416,7 @@
 
 							<div class="row">
 
-								<div class="col-lg-6 col-md-6">
+								<div class="col-sm-6">
 									<div class="plan-item">
 										<h3>App Design / <span>199$</span></h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, magnam?</p>
@@ -429,7 +429,7 @@
 									</div>
 								</div>
 
-								<div class="col-lg-6 col-md-6">
+								<div class="col-sm-6">
 									<div class="plan-item">
 										<h3>Web Design / <span>299$</span></h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, magnam?</p>
@@ -497,15 +497,16 @@
 							<div class="row">
 								
 								<div class="col-lg-7 col-md-7 col-md-push-5">
-									<form action="" class="form">
+									<form action="" class="form clearfix">
 										<input type="text" placeholder="Your Name" required>
 										<input type="mail" placeholder="Your Email" required>
 										<div class="select" id="select"><span>What are Your Interested</span><i class="fa fa-angle-down" aria-hidden="true"></i>
 											<ul class="select-item">
 												<li rel="hidden" class="hidden">What are Your Interested</li>
-												<li rel="Interest1">Interest1</li>
-												<li rel="Interest2">Interest2</li>
-												<li rel="Interest3">Interest3</li>
+												<li rel="Interest1">HTML5</li>
+												<li rel="Interest2">CSS3</li>
+												<li rel="Interest3">JavaScript</li>
+												<li rel="Interest3">Angular 2</li>
 											</ul>
 										</div>
 
